alteração dos preços e incluido as cervejas original

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 </ul>
             </section>
 
-            <section class="combos" id="combos">
+            <!-- <section class="combos" id="combos">
 
                 <h2 class="tittle">Combos</h2>
 
@@ -587,7 +587,7 @@
 
 
                 </ul>
-            </section>
+            </section> -->
 
             <section class="caipirinhaTradicional" id="caipirinhaTradicional">
 
@@ -796,14 +796,43 @@
                                 <h3 class="tittle-foods">Cerveja Heineken</h3>
                                 <p>Lata 269ml.
                                 </p>
-                                <b>R$ 5,00</b>
+                                <b>R$ 6,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/cerveja/heilk.jpg"
                                 alt="Cerveja Heineken 269ml">
                         </div>
                     </li>
 
+                    <li class="food-line">
+                        <div class="div">
 
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Cerveja Heineken</h3>
+                                <p>Garrafa 600ml.
+                                </p>
+                                <b>R$ 19,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/cerveja/heik600.jpeg"
+                                alt="Cerveja Heineken 269ml">
+                        </div>
+                    </li>
+
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Original</h3>
+                                <p>Garrafa 600ml
+                                </p>
+                                <b>R$ 12,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/cerveja/original.png"
+                                alt="Long Neck Smirnoff Ice.">
+                        </div>
+                    </li>
+
+                    
                     <li class="food-line">
                         <div class="div">
 
@@ -863,8 +892,8 @@
                                 <h3 class="tittle-foods">Lata de Coca Cola</h3>
                                 <p>Lata 350ml
                                 </p>
-                                <b>Tradicional: R$ 7,00</b>
-                                <b>Zero: R$ 7,00</b>
+                                <b>Tradicional: R$ 8,00</b>
+                                <b>Zero: R$ 6,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/semAlcool/coca.jpg"
                                 alt="Lata de Coca Cola.">
@@ -878,7 +907,7 @@
                                 <h3 class="tittle-foods">Lata de Guaraná</h3>
                                 <p>Lata 350ml
                                 </p>
-                                <b>R$ 7,00</b>
+                                <b>R$ 8,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/semAlcool/guarana.webp"
                                 alt="Lata de Guaraná">
@@ -893,7 +922,7 @@
                                 <h3 class="tittle-foods">Lata de Schweppes Citrus</h3>
                                 <p>Lata 350ml
                                 </p>
-                                <b>R$ 7,00</b>
+                                <b>R$ 8,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/semAlcool/citrus.webp"
                                 alt="Lata de Schweppes Citrus">
