inclusão da coca pet e alguns preços

--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                                 <h3 class="tittle-foods">Original</h3>
                                 <p>Garrafa 600ml
                                 </p>
-                                <b>R$ 12,00</b>
+                                <b>R$ 15,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/cerveja/original.png"
                                 alt="Long Neck Smirnoff Ice.">
@@ -893,9 +893,23 @@
                                 <p>Lata 350ml
                                 </p>
                                 <b>Tradicional: R$ 8,00</b>
-                                <b>Zero: R$ 6,00</b>
+                                <b>Zero: R$ 8,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/semAlcool/coca.jpg"
+                                alt="Lata de Coca Cola.">
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Coca-Cola Pet</h3>
+                                <p>Garrafa 200ml
+                                </p>
+                                <b> R$ 6,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/semAlcool/coca-pet-200ml.jpg"
                                 alt="Lata de Coca Cola.">
                         </div>
                     </li>
