adicionado pratos principais

--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
                                 alt="Prato com contra filé e fritas">
                         </div>
                     </li>
+                    
 
 
 
@@ -323,6 +324,68 @@
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/frango.jpg"
                                 alt="Prato com filé de frangoie fritas">
+                        </div>
+                    </li>
+
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Calabresa</h3>
+                                <p>Acompanha arroz, feijão e salada.
+                                    <br> Serve 1 pessoas.
+                                </p>
+                                <b>R$ 20,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/calabresa.jpg"
+                                alt="Prato com contra filé e fritas">
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Frango ao Molho</h3>
+                                <p>Acompanha arroz, feijão e salada.
+                                    <br> Serve 1 pessoas.
+                                </p>
+                                <b>R$ 23,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/fra.jpg"
+                                alt="Prato com contra filé e fritas">
+                        </div>
+                    </li>
+
+                    
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Isca de Peixe empanado</h3>
+                                <p>Acompanha arroz, feijão e salada.
+                                    <br> Serve 1 pessoas.
+                                </p>
+                                <b>R$ 30,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/isca.jpg"
+                                alt="Prato com contra filé e fritas">
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Frango empanado</h3>
+                                <p>Acompanha arroz, feijão e salada.
+                                    <br> Serve 1 pessoas.
+                                </p>
+                                <b>R$ 30,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/franpa.jpg"
+                                alt="Prato com contra filé e fritas">
                         </div>
                     </li>
 
