inclusão dos pratos executivos

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </li>
 
 
-                    <!-- <li class="food-line">
+                  <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -197,7 +197,7 @@
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/salmao.jpg"
                                 alt="Prato com Salmão Grelhado">
                         </div>
-                    </li> -->
+                    </li> 
 
                     <li class="food-line">
                         <div class="div">
@@ -501,7 +501,7 @@
                         </div>
                     </li>
 
-                    <!-- <li class="food-line">
+                   <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -513,7 +513,7 @@
                             <img class="image-foods" src="./src/image/cardapio/porcao/picanhaali.png"
                                 alt="Prato com picanha com aligot">
                         </div>
-                    </li> -->
+                    </li>
 
 
                     <li class="food-line">
