alteração de preço

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 <p>Arroz primavera, batata sauté e salada..
                                     <br> Serve 1 pessoas
                                 </p>
-                                <b>R$ 47,99</b>
+                                <b>R$ 59,99</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/salmao.jpg"
                                 alt="Prato com Salmão Grelhado">
@@ -205,10 +205,9 @@
                             <div class="div-block">
                                 <h3 class="tittle-foods">Parmegiana do bahia Contra Filé</h3>
                                 <p>Acompanha Arroz, salada e fritas.
-                                    <br> Serve 1 pessoas
                                 </p>
-                                <b>R$ 39,99</b>
-                            </div>
+                                <b>Pequeno: R$ 43,00</b>
+                                <b>Grande: R$ 80,00</b>                            </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/parfile.jpg"
                                 alt="Prato com Parmegiana e fritas">
                         </div>
@@ -219,10 +218,11 @@
 
                             <div class="div-block">
                                 <h3 class="tittle-foods">Parmegiana do bahia Filé de Frango</h3>
-                                <p>Acompanha Arroz, salada e fritas.
-                                    <br> Serve 1 pessoas
+                                <p>
+                                    Acompanha Arroz, salada e fritas.                  
                                 </p>
-                                <b>R$ 33,00</b>
+                                 <b>Pequeno: R$ 35,00</b>
+                                <b>Grande: R$ 65,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/parfrango.jpg"
                                 alt="Prato com Parmegiana e fritas">
@@ -237,7 +237,7 @@
                                 <p>Acompanha Arroz, feijão, batata sauté e salada.
                                     <br> Serve 1 pessoas
                                 </p>
-                                <b>R$ 47,99</b>
+                                <b>R$ 59,99</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/piicanha.jpg"
                                 alt="Prato com picanha e fritas">
@@ -257,6 +257,7 @@
                                 <b>Salada: R$ 5,00</b>
                                 <b>bifé de picanha: R$ 18,00</b>
                                 <b>bifé de contra filé: R$ 15,00</b>
+                                <b>Porção de feijão para uma pessoa: R$ 8,00</b>
                             </div>
                             <!-- <img class="image-foods" src="./src/image/cardapio/porcao/picanhaali.png"
                                 alt="Prato com picanha com aligot"> -->
@@ -286,7 +287,7 @@
                                 <p>Acompanha Arroz, Feijão, Fritas e Salada.
                                     <br>Serve 1 pessoas.
                                 </p>
-                                <b>R$ 30,00</b>
+                                <b>R$ 33,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/cavalo.jpg"
                                 alt="Prato com contra filé e fritas">
@@ -302,7 +303,7 @@
                                 <p>Acompanha arroz, feijão, fritas e salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 28,00</b>
+                                <b>R$ 18,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/filecontra.png"
                                 alt="Prato com contra filé e fritas">
@@ -320,7 +321,7 @@
                                 <p>Acompanha Arroz, Feijão, Fritas e Salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 25,00</b>
+                                <b>R$ 15,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/frango.jpg"
                                 alt="Prato com filé de frangoie fritas">
@@ -343,7 +344,7 @@
                         </div>
                     </li>
 
-                    <li class="food-line">
+                    <!-- <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -356,7 +357,7 @@
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/fra.jpg"
                                 alt="Prato com contra filé e fritas">
                         </div>
-                    </li>
+                    </li> -->
 
                     
                     <li class="food-line">
@@ -935,8 +936,8 @@
                             <div class="div-block">
                                 <h3 class="tittle-foods">Aguá</h3>
                                 <p>Garrafa 500ml.</p>
-                                <b>Com gás: R$ 4,50</b>
-                                <b>Sem gás: R$ 4,00</b>
+                                <b>Com gás: R$ 6,00</b>
+                                <b>Sem gás: R$ 5,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/semAlcool/agua.webp"
                                 alt="Garrafa de Aguá 500ml">
@@ -971,7 +972,7 @@
                                 alt="Lata de Coca Cola.">
                         </div>
                     </li>
-
+<!-- 
                     <li class="food-line">
                         <div class="div">
 
@@ -984,7 +985,7 @@
                             <img class="image-foods" src="./src/image/cardapio/semAlcool/coca-pet-200ml.jpg"
                                 alt="Lata de Coca Cola.">
                         </div>
-                    </li>
+                    </li> -->
 
                     <li class="food-line">
                         <div class="div">
