alteração de preço

--- a/index.html
+++ b/index.html
@@ -258,6 +258,9 @@
                                 <b>bifé de picanha: R$ 18,00</b>
                                 <b>bifé de contra filé: R$ 15,00</b>
                                 <b>Porção de feijão para uma pessoa: R$ 8,00</b>
+                                <b>Filé de frango: R$ 15,00</b>
+                                <b>Bife de contra filé: R$ 15,00</b>
+                                <b>Bife de picanha: R$ 20,00</b>
                             </div>
                             <!-- <img class="image-foods" src="./src/image/cardapio/porcao/picanhaali.png"
                                 alt="Prato com picanha com aligot"> -->
@@ -303,7 +306,7 @@
                                 <p>Acompanha arroz, feijão, fritas e salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 18,00</b>
+                                <b>R$ 30,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/filecontra.png"
                                 alt="Prato com contra filé e fritas">
