atualização de preços

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                                 <h3 class="tittle-foods">Baião de dois do Bahia</h3>
                                 <p>Feito com Feijão de corda, arroz, manteiga de
                                     garrafa calabresa, bacon queijo coalho, jabá desfiado e pimenta biquinho.</p>
-                                <b>Pequeno: R$ 60,00</b>
-                                <b>Grande: R$ 90,00</b>
+                                <b>Pequeno: R$ 70,00</b>
+                                <b>Grande: R$ 98,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/bahiao.jpg" alt="">
                         </div>
@@ -122,8 +122,9 @@
                                 <p>Feito com Feijão de corda, arroz, manteiga de
                                     garrafa calabresa, bacon queijo coalho, jabá desfiado, pimenta biquinho e Picanha.
                                 </p>
-                                <b>Pequeno: R$ 85,00</b>
-                                <b>Grande: R$ 138,00</b>
+                                <b>Pequeno: R$ 98,00</b> Serve 1a 2
+                                <b>Grande: R$ 160,00</b> serve 3
+                                <b>Familia: R$ 265,00</b> serve 5
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/bahiaoPicanha.jpg"
                                 alt="">
@@ -139,10 +140,10 @@
                                 <p>Acompanha: arroz branco, torresmo, farofa,couve refolgada, laranja e molho de
                                     pimenta.
                                 </p>
-                                <b>individual: R$ 30,00</b>
-                                <b>Pequeno: R$ 45,00</b>
-                                <b>Média: R$ 55,00</b>
-                                <b>Grande: R$ 85,00</b>
+                                <b>individual: R$ 35,00</b>
+                                <b>Pequeno: R$ 50,00</b>
+                                <b>Média: R$ 65,00</b>
+                                <b>Grande: R$ 95,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/feijoada.jpg"
                                 alt="Prato de feijpada completa">
@@ -157,9 +158,8 @@
                                 <p>Nosso delicioso arroz biro biro ,é servido com couve refolgada, vinagrete e nossa
                                     suculenta Picanha.
                                 </p>
-                                <b>Pequeno: R$ 70,00</b>
-                                <b>Medio: R$ 90,00</b>
-                                <b>Grande: R$ 130,00</b>
+                                <b>Grande: R$ 155,00</b>
+                                <b>Familia: R$ 220,00</b>
                             </div>
                             <img class="modify image-foods" src="./src/image/cardapio/pratosEspeciais/biro-biro.jpg"
                                 alt="imagem do arroz biro biro com Picanha">
@@ -174,9 +174,8 @@
                                 <p>clássico feijão tropeiro, é servido com couve puxado na manteiga, torresmo, ovo
                                     mexido e a nossa picanha acompanha arroz e vinagrete.
                                 </p>
-                                <b>Pequeno: R$ 75,00</b>
-                                <b>Medio: R$ 95,00</b>
-                                <b>Grande: R$ 140,00</b>
+                                 <b>Grande: R$ 175,00</b>
+                                <b>Familia: R$ 280,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/tropeiro.jpg"
                                 alt="imagem do prato tropeiro com picanha">
@@ -206,8 +205,8 @@
                                 <h3 class="tittle-foods">Parmegiana do bahia Contra Filé</h3>
                                 <p>Acompanha Arroz, salada e fritas.
                                 </p>
-                                <b>Pequeno: R$ 43,00</b>
-                                <b>Grande: R$ 80,00</b>                            </div>
+                                <b>Pequeno: R$ 45,00</b>
+                                <b>Grande: R$ 95,00</b>                            </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/parfile.jpg"
                                 alt="Prato com Parmegiana e fritas">
                         </div>
@@ -221,8 +220,8 @@
                                 <p>
                                     Acompanha Arroz, salada e fritas.                  
                                 </p>
-                                 <b>Pequeno: R$ 35,00</b>
-                                <b>Grande: R$ 65,00</b>
+                                 <b>Pequeno: R$ 38,00</b>
+                                <b>Grande: R$ 85,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/parfrango.jpg"
                                 alt="Prato com Parmegiana e fritas">
@@ -251,15 +250,16 @@
 
                             <div class="div-block">
                                 <h3 class="tittle-foods">Adicionais</h3>
-                                <b>Mandioca: R$ 8,00</b>
+                                <b>Mandioca: R$ 10,00</b>
+                                <b>Mandioca porção grande: R$ 19,00</b>
                                 <b>Queijo coalho fatia: R$ 8,00</b>
                                 <b>Ovo: R$ 4,00</b>
                                 <b>Salada: R$ 5,00</b>
                                 <b>bifé de picanha: R$ 18,00</b>
                                 <b>bifé de contra filé: R$ 15,00</b>
                                 <b>Porção de feijão para uma pessoa: R$ 8,00</b>
-                                <b>Filé de frango: R$ 15,00</b>
-                                <b>Bife de contra filé: R$ 15,00</b>
+                                <b>Filé de frango: R$ 18,00</b>
+                                <b>Bife de contra filé: R$ 20,00</b>
                                 <b>Bife de picanha: R$ 20,00</b>
                             </div>
                             <!-- <img class="image-foods" src="./src/image/cardapio/porcao/picanhaali.png"
@@ -290,7 +290,7 @@
                                 <p>Acompanha Arroz, Feijão, Fritas e Salada.
                                     <br>Serve 1 pessoas.
                                 </p>
-                                <b>R$ 33,00</b>
+                                <b>R$ 39,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/cavalo.jpg"
                                 alt="Prato com contra filé e fritas">
@@ -306,7 +306,7 @@
                                 <p>Acompanha arroz, feijão, fritas e salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 30,00</b>
+                                <b>R$ 36,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/filecontra.png"
                                 alt="Prato com contra filé e fritas">
@@ -324,7 +324,7 @@
                                 <p>Acompanha Arroz, Feijão, Fritas e Salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 25,00</b>
+                                <b>R$ 33,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/frango.jpg"
                                 alt="Prato com filé de frangoie fritas">
@@ -371,7 +371,7 @@
                                 <p>Acompanha arroz, feijão e salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 30,00</b>
+                                <b>R$ 39,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/isca.jpg"
                                 alt="Prato com contra filé e fritas">
@@ -386,7 +386,7 @@
                                 <p>Acompanha arroz, feijão e salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 30,00</b>
+                                <b>R$ 36,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/franpa.jpg"
                                 alt="Prato com contra filé e fritas">
@@ -413,11 +413,11 @@
 
                             <div class="div-block">
                                 <h3 class="tittle-foods">Calabresa</h3>
-                                <p>Acompanha Arroz, vinagrete, molho da casa e pães
+                                <p>vinagrete, molho da casa e pães
                                     <br> Serve 2 pessoas.
                                 </p>
-                                <b>Calabresa:R$ 50,00</b>
-                                <b>Calabresa com batata:R$ 60,00</b>
+                                <b>Calabresa:R$ 55,00</b>
+                                <b>Calabresa com batata:R$ 68,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/calabresa.jpg"
                                 alt="Prato com porção de calabresa com cebola">
@@ -446,11 +446,11 @@
                         <div class="div">
 
                             <div class="div-block">
-                                <h3 class="tittle-foods">Batata com cheddar e Bacon</h3>
-                                <p>Acompanha molho especial da casa.</p>
+                                <h3 class="tittle-foods">Batata Frita </h3>
                                 <b>Pequeno: R$ 12,00</b>
                                 <b>Medio: R$ 20,00</b>
                                 <b>Grande: R$ 40,00</b>
+                                <p>Acompanha cheddar e Bacon</p>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/batata-cheddar.jpg"
                                 alt="Prato com porção de batata frita com cheddar e bacon">
@@ -466,8 +466,8 @@
                                 <p>acompanha vinagrete, molho da casa e pães.
                                     <br> Serve 2 pessoas
                                 </p>
-                                <b>contra filé: R$75,00</b>
-                                <b>contra filé com batata: R$85,00</b>
+                                <b>contra filé: R$85,00</b>
+                                <b>contra filé com batata: R$95,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/contra.jpg"
                                 alt="Prato com porção de contra filé">
@@ -483,8 +483,8 @@
                                 <p>Contra filé, frango, calabresa, vinagrete, molho da casa e pães.
                                     <br> Serve 2 pessoas
                                 </p>
-                                <b>Mista: R$ 80,00</b>
-                                <b>Mista com batata: R$ 90,00</b>
+                                <b>Mista: R$ 90,00</b>
+                                <b>Mista com batata: R$ 100,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/mista.jpg"
                                 alt="Prato com porcão mista que inclui contra filé, frango e calabresa">
@@ -498,7 +498,9 @@
                                 <h3 class="tittle-foods">Picanha Brasileira</h3>
                                 <p>Acompanha vinagrete, molho da casa e pães.
                                 </p>
-                                <b>R$ 120,00</b>
+                                <b>Pequeno: R$ 140,00</b> Serve 2 pessoas
+                                <b>Média: R$ 180,00</b> Serve 3 pessoas
+                                <b>Grande: R$ 220,00</b> Serve 5 pessoas
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/picanha-br.jpg"
                                 alt="Prato com picanha Brasileira">
@@ -511,8 +513,9 @@
                             <div class="div-block">
                                 <h3 class="tittle-foods">Picanha com aligot</h3>
                                 <p>Arroz, fritas, vinagrete, farofa, molho da casa.</p>
-                                <br> <b>Meia: R$ 180,00</b>
-                                <br> <b>Inteira: R$ 220,00</b>
+                                <b>Pequeno: R$ 180,00</b> Serve 2 pessoas
+                                <b>Média: R$ 260,00</b> Serve 4 pessoas
+                                <b>Grande: R$ 290,00</b> Serve 6 pessoas
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/picanhaali.png"
                                 alt="Prato com picanha com aligot">
@@ -550,12 +553,22 @@
 
                             <div class="div-block">
                                 <h3 class="tittle-foods">Sucos naturais</h3>
-                                <p>Temos nos sabores, Maracuja, Abacaxi, Morango e Limão.</p>
-                                <b>Copo: R$ 13,00</b>
-                                <b>Jarras: R$ 25,00</b>
-                            </div>
-                            <img class="image-foods" src="./src/image/cardapio/semAlcool/sucos.jpg"
-                                alt="Garrafa de Aguá 500ml">
+                                <b>Suco copo</b>
+                                <p>Limão $:12</p>
+                               <p>Abacaxi $:12</p>
+                               <p> Abacaxi com hortelan $:13</p>
+                               <p> Morango $:13</p>
+                               <p> Maracujá $:13</p>
+                                <p>Laranja com limão $:13</p>  
+                                                             <b>Jarras 1.200ML</b>
+                              <p>Limão $:25</p> 
+                               <p>Abacaxi $:27</p> 
+                               <p>Morango $:28</p> 
+                               <p>Maracujá $:28</p> 
+                                <p>Laranja com limão $:28</p>                             
+                            </div>  
+
+
                         </div>
                     </li>
                 </ul>
@@ -675,9 +688,9 @@
                         <div class="div">
 
                             <div class="div-block">
-                                <h3 class="tittle-foods">Caipirinha Tradicional</h3>
+                                <h3 class="tittle-foods">Caipirinha de Limão</h3>
                                 <b>Cachaça: R$ 20,00</b>
-                                <b>Vodka: R$ 20,00</b>
+                                <b>Vodka: R$ 25,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/caipirinhaTradicional/limao.png"
                                 alt="caipirinha Tradicional">
@@ -689,8 +702,8 @@
 
                             <div class="div-block">
                                 <h3 class="tittle-foods">Caipirinha de maracujá</h3>
-                                <b>Cachaça: R$ 25,00</b>
-                                <b>Vodka: R$ 25,00</b>
+                                <b>Cachaça: R$ 30,00</b>
+                                <b>Vodka: R$ 35,00</b>
                             </div>
                             <img class="image-foods"
                                 src="./src/image/cardapio/caipirinhaTradicional/caipirinha-de-maracuja.jpg"
@@ -704,7 +717,7 @@
                             <div class="div-block">
                                 <h3 class="tittle-foods">Caipirinha de Morango</h3>
                                 <b>Cachaça: R$ 25,00</b>
-                                <b>Vodka: R$ 25,00</b>
+                                <b>Vodka: R$ 35,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/caipirinhaTradicional/morango.png"
                                 alt="caipirinha Tradicional">
@@ -751,8 +764,8 @@
 
                             <div class="div-block">
                                 <h3 class="tittle-foods">Caipirinha de morango com limão</h3>
-                                <b>Cachaça: R$ 31,00</b>
-                                <b>Vodka: R$ 31,00</b>
+                                <b>Cachaça: R$ 25,00</b>
+                                <b>Vodka: R$ 30,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/caipirinhaEspeciais/morango.jpg"
                                 alt="caipirinha Caipirinha de morango com limão">
@@ -925,7 +938,6 @@
 
                 </ul>
             </section>
-
 
             <section class="bebidasNAlcool" id="bebidasNAlcool">
 
