alteração de preço

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
                                 <p>Nosso delicioso arroz biro biro ,é servido com couve refolgada, vinagrete e nossa
                                     suculenta Picanha.
                                 </p>
+                                <b>Pequeno: R$ 65,00</b>
+                                <b>Medio: R$ 95,00</b>
                                 <b>Grande: R$ 155,00</b>
                                 <b>Familia: R$ 220,00</b>
                             </div>
@@ -174,6 +176,8 @@
                                 <p>clássico feijão tropeiro, é servido com couve puxado na manteiga, torresmo, ovo
                                     mexido e a nossa picanha acompanha arroz e vinagrete.
                                 </p>
+                                <b>Pequeno: R$ 78,00</b>
+                                <b>Grande: R$ 110,00</b>
                                  <b>Grande: R$ 175,00</b>
                                 <b>Familia: R$ 280,00</b>
                             </div>
@@ -255,8 +259,6 @@
                                 <b>Queijo coalho fatia: R$ 8,00</b>
                                 <b>Ovo: R$ 4,00</b>
                                 <b>Salada: R$ 5,00</b>
-                                <b>bifé de picanha: R$ 18,00</b>
-                                <b>bifé de contra filé: R$ 15,00</b>
                                 <b>Porção de feijão para uma pessoa: R$ 8,00</b>
                                 <b>Filé de frango: R$ 18,00</b>
                                 <b>Bife de contra filé: R$ 20,00</b>
